# img2b64

./: .gitignore  LICENSE  README.md  img2b64.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
img2b64/: img2b64.py
tests/: sampleInb64.md  test_img2b64.py
