[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[project]
name = "img2b64"
version = "0.1.0"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
